--- a/test_reco.html
+++ b/test_reco.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="recommended-title">
-    <h1 class="cris-title">Next Recommendations (click any)</h1>
+    <h1 class="cris-title">Next Recommendations<br>(click any)</h1>
     </div>
     <div class="recommended-products">
     <ul id="horizontal-list">
@@ -64,6 +64,7 @@
             text-decoration: underline;
         }
         .cris-title {
+            text-align: center;
             font-size: 1.5em;
         }
         .base-title {
