Added first query retry

--- a/test_reco.html
+++ b/test_reco.html
@@ -196,8 +196,7 @@
         function otherExample() {
             getRecos(0, exampleList[Math.floor(Math.random() * exampleList.length)]);
         }
-        // getRecos(0, exampleList[Math.floor(Math.random() * exampleList.length)], true);
-        getRecos(0, "asdf", true);
+        getRecos(0, exampleList[Math.floor(Math.random() * exampleList.length)], true);
 
 
         function reloadRecos(queryUrl) {
